--- a/docs/docu.qmd
+++ b/docs/docu.qmd
@@ -85,6 +85,7 @@ main/                                           # Répertoire principal du proje
 │   ├── donnée.py                               # Fonctions de traitement des données
 │   ├── fonctions_basedonnees.py                # Fonctions pour les bases de données
 │   └── gestion_donnee.py                       # Classe "GestionnaireDonnees" pour le traitement des données
+├── test/                                       # Répertoire contenant le code pour les tests
 ├── .gitignore                                  # Liste des fichiers ignorés par Git
 ├── LICENCE                                     # Informations sur la licence du projet
 ├── README.md                                   # Résumé et instructions pour exécuter le projet
